--- a/module_3/src/ui/Input/input.scss
+++ b/module_3/src/ui/Input/input.scss
@@ -10,9 +10,20 @@ input::-webkit-inner-spin-button {
 .input {
     &__wrapper {
         position: relative;
-        width: 300px;
         display: flex;
         flex-direction: column;
+
+        &.small {
+            width: 300px;
+        }
+
+        &.medium {
+            width: 400px;
+        }
+
+        &.large {
+            width: 600px;
+        }
     }
 
     &__label {
