--- a/module_3/src/components/GetCard/getCard.scss
+++ b/module_3/src/components/GetCard/getCard.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     gap: 40px;
+    margin-bottom: 80px;
 
     &__title {
         margin: 0;
@@ -50,6 +51,25 @@
                 span {
                     width: 80%;
                     @include baseMedium($black);
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 920px) {
+    .get-card {
+
+        &__steps {
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
+
+            & .step {
+                width: 70%;
+                align-items: center;
+                &__header {
+                    width: 70%;
                 }
             }
         }
