--- a/module_3/src/ui/Button/button.scss
+++ b/module_3/src/ui/Button/button.scss
@@ -3,6 +3,7 @@
 
 .button {
     width: fit-content;
+    min-width: 130px;
     height: 50px;
     background-color: $blue;
     padding: 16px;
@@ -12,6 +13,22 @@
     letter-spacing: 0.02em;
     cursor: pointer;
     transition: all 0.3s ease;
+
+    &.danger {
+        background-color: #d93737;
+    }
+
+    &.small {
+        height: 40px;
+        min-width: 100px;
+        padding: 0;
+    }
+
+    &.disabled {
+        pointer-events: none;
+        opacity: 0.5;
+    }
+
     &:hover {
         background-color: #7796c0;
     }
