--- a/module_3/src/components/CardInfo/cardInfo.scss
+++ b/module_3/src/components/CardInfo/cardInfo.scss
@@ -19,6 +19,10 @@
         flex-direction: column;
         gap: 40px;
 
+        a {
+            text-decoration: none;
+        }
+        
         h2 {
             margin: 0;
             @include extraLargeBold($white);
